[gd_scene load_steps=14 format=3 uid="uid://dxwirtpiwryiu"]

[ext_resource type="Script" uid="uid://ceme52vqmo744" path="res://src/ui/notification_layer.gd" id="1_itcna"]
[ext_resource type="Texture2D" uid="uid://ym11e6iwn43k" path="res://assets/ui/toast_background.png" id="2_yisdb"]
[ext_resource type="AudioStream" uid="uid://o88xg4swhuyp" path="res://audio/ui/Mystic Hover A.wav" id="3_iw35v"]
[ext_resource type="AudioStream" uid="uid://dipvdkdh2fg7f" path="res://audio/enemy/Metal Old Plate Impacts B.wav" id="4_0kxqq"]
[ext_resource type="AudioStream" uid="uid://dacwgewqa1lmf" path="res://audio/enemy/Warp FM 001 edit.wav" id="5_0kxqq"]
[ext_resource type="AudioStream" uid="uid://3sjwr8gx716s" path="res://audio/enemy/Digital Disconnect Loop edit.wav" id="6_mm78n"]

[sub_resource type="LabelSettings" id="LabelSettings_yisdb"]
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_iw35v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background1:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 0.75)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-10, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Background2:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Background2:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 0.75)]
}

[sub_resource type="Animation" id="Animation_yisdb"]
resource_name = "toast_animation"
length = 6.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background1:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 0.75)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background1:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 2, 3, 5, 6),
"transitions": PackedFloat32Array(0.5, 0.5, 0.5, 1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25, 0.4),
"transitions": PackedFloat32Array(0.5, -2, 1),
"update": 0,
"values": [Vector2(300, 0), Vector2(-20, 0), Vector2(-10, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Control:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2, 5, 6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Background2:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 2, 5),
"transitions": PackedFloat32Array(0.5, 0.5, 0.5, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(0.25098, 0, 0, 0.501961), Color(0.25098, 0, 0, 0.501961), Color(1, 1, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Background2:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.25, 1)]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("%ToastSFX")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iw35v"]
_data = {
&"RESET": SubResource("Animation_iw35v"),
&"toast_animation": SubResource("Animation_yisdb")
}

[sub_resource type="Animation" id="Animation_7q16a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HurtRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_nrqf8"]
resource_name = "hurt_animation"
length = 11.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HurtRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 11),
"transitions": PackedFloat32Array(1, 1, -2),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%HurtAnimationPlayer/ImpactSFX")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("%HurtAnimationPlayer/AmbientSFX")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("%HurtAnimationPlayer/AmbientSFX2")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0kxqq"]
_data = {
&"RESET": SubResource("Animation_7q16a"),
&"hurt_animation": SubResource("Animation_nrqf8")
}

[node name="NotificationLayer" type="CanvasLayer"]
layer = 10
script = ExtResource("1_itcna")

[node name="NotificationMenu" type="Control" parent="."]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HurtRect" type="ColorRect" parent="NotificationMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="Control" type="Control" parent="NotificationMenu"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2

[node name="Background2" type="TextureRect" parent="NotificationMenu/Control"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -256.0
offset_bottom = 256.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(1, 0.75)
pivot_offset = Vector2(512, 256)
mouse_filter = 2
texture = ExtResource("2_yisdb")

[node name="Background1" type="TextureRect" parent="NotificationMenu/Control"]
unique_name_in_owner = true
modulate = Color(0, 0, 0, 0)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -512.0
offset_top = -256.0
offset_bottom = 256.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(1, 0.75)
pivot_offset = Vector2(512, 256)
mouse_filter = 2
texture = ExtResource("2_yisdb")

[node name="Control" type="Control" parent="NotificationMenu/Control"]
modulate = Color(1, 1, 1, 0)
anchors_preset = 0
offset_left = -10.0
offset_right = -10.0
mouse_filter = 2

[node name="ToastLabel" type="Label" parent="NotificationMenu/Control/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -184.0
offset_top = -5.5
offset_bottom = 5.5
grow_horizontal = 0
grow_vertical = 2
theme_type_variation = &"DialogLabel"
text = "Something feels different..."
label_settings = SubResource("LabelSettings_yisdb")
horizontal_alignment = 2

[node name="ToastAnimationPlayer" type="AnimationPlayer" parent="NotificationMenu/Control"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_iw35v")
}

[node name="ToastSFX" type="AudioStreamPlayer2D" parent="NotificationMenu/Control/ToastAnimationPlayer"]
unique_name_in_owner = true
stream = ExtResource("3_iw35v")
pitch_scale = 0.8
panning_strength = 0.0

[node name="HurtAnimationPlayer" type="AnimationPlayer" parent="NotificationMenu"]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_0kxqq")
}

[node name="ImpactSFX" type="AudioStreamPlayer2D" parent="NotificationMenu/HurtAnimationPlayer"]
stream = ExtResource("4_0kxqq")
volume_db = -3.0
pitch_scale = 0.8
panning_strength = 0.0

[node name="AmbientSFX" type="AudioStreamPlayer2D" parent="NotificationMenu/HurtAnimationPlayer"]
stream = ExtResource("5_0kxqq")
volume_db = -3.0
panning_strength = 0.0

[node name="AmbientSFX2" type="AudioStreamPlayer2D" parent="NotificationMenu/HurtAnimationPlayer"]
stream = ExtResource("6_mm78n")
panning_strength = 0.0
